--- a/proceedings/lh2019.bib
+++ b/proceedings/lh2019.bib
@@ -1,6 +1,632 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% http://bibdesk.sourceforge.net/
 
+@article{Komiske:2018cqr,
+      author         = "Komiske, Patrick T. and Metodiev, Eric M. and Thaler,
+                        Jesse",
+      title          = "{Energy Flow Networks: Deep Sets for Particle Jets}",
+      journal        = "JHEP",
+      volume         = "01",
+      year           = "2019",
+      pages          = "121",
+      doi            = "10.1007/JHEP01(2019)121",
+      eprint         = "1810.05165",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ph",
+      reportNumber   = "MIT-CTP 5064",
+      SLACcitation   = "%%CITATION = ARXIV:1810.05165;%%"
+}
+
+
+@article{Aaboud:2018ibj,
+      author         = "Aaboud, Morad and others",
+      title          = "{Measurement of colour flow using jet-pull observables in
+                        $t\bar{t}$ events with the ATLAS experiment at $\sqrt{s} =
+                        13\,\hbox {TeV}$}",
+      collaboration  = "ATLAS",
+      journal        = "Eur. Phys. J.",
+      volume         = "C78",
+      year           = "2018",
+      number         = "10",
+      pages          = "847",
+      doi            = "10.1140/epjc/s10052-018-6290-2",
+      eprint         = "1805.02935",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ex",
+      reportNumber   = "CERN-EP-2018-041",
+      SLACcitation   = "%%CITATION = ARXIV:1805.02935;%%"
+}
+
+@article{Aad:2015lxa,
+      author         = "Aad, Georges and others",
+      title          = "{Measurement of colour flow with the jet pull angle in
+                        $t\bar{t}$ events using the ATLAS detector at $\sqrt{s}=8$
+                        TeV}",
+      collaboration  = "ATLAS",
+      journal        = "Phys. Lett.",
+      volume         = "B750",
+      year           = "2015",
+      pages          = "475-493",
+      doi            = "10.1016/j.physletb.2015.09.051",
+      eprint         = "1506.05629",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ex",
+      reportNumber   = "CERN-PH-EP-2015-128",
+      SLACcitation   = "%%CITATION = ARXIV:1506.05629;%%"
+}
+
+
+@article{Gallicchio:2010sw,
+      author         = "Gallicchio, Jason and Schwartz, Matthew D.",
+      title          = "{Seeing in Color: Jet Superstructure}",
+      journal        = "Phys. Rev. Lett.",
+      volume         = "105",
+      year           = "2010",
+      pages          = "022001",
+      doi            = "10.1103/PhysRevLett.105.022001",
+      eprint         = "1001.5027",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ph",
+      SLACcitation   = "%%CITATION = ARXIV:1001.5027;%%"
+}
+
+@article{Hoche:2015sya,
+      author         = "Hoche, Stefan and Prestel, Stefan",
+      title          = "{The midpoint between dipole and parton showers}",
+      journal        = "Eur. Phys. J.",
+      volume         = "C75",
+      year           = "2015",
+      number         = "9",
+      pages          = "461",
+      doi            = "10.1140/epjc/s10052-015-3684-2",
+      eprint         = "1506.05057",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ph",
+      reportNumber   = "SLAC-PUB-16304, MCNET-15-13",
+      SLACcitation   = "%%CITATION = ARXIV:1506.05057;%%"
+}
+@article{Buckley:2010jn,
+      author         = "Buckley, Andy and Whalley, Mike",
+      title          = "{HepData reloaded: Reinventing the HEP data archive}",
+      booktitle      = "{Proceedings, 13th International Workshop on Advanced
+                        computing and analysis techniques in physics research
+                        (ACAT2010): Jaipur, India, February 22-27, 2010}",
+      journal        = "PoS",
+      volume         = "ACAT2010",
+      year           = "2010",
+      pages          = "067",
+      doi            = "10.22323/1.093.0067",
+      eprint         = "1006.0517",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ex",
+      SLACcitation   = "%%CITATION = ARXIV:1006.0517;%%"
+}
+
+@article{Maguire:2017ypu,
+      author         = "Maguire, Eamonn and Heinrich, Lukas and Watt, Graeme",
+      title          = "{HEPData: a repository for high energy physics data}",
+      booktitle      = "{Proceedings, 22nd International Conference on Computing
+                        in High Energy and Nuclear Physics (CHEP2016): San
+                        Francisco, CA, October 14-16, 2016}",
+      journal        = "J. Phys. Conf. Ser.",
+      volume         = "898",
+      year           = "2017",
+      number         = "10",
+      pages          = "102006",
+      doi            = "10.1088/1742-6596/898/10/102006",
+      eprint         = "1704.05473",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ex",
+      reportNumber   = "IPPP-17-31",
+      SLACcitation   = "%%CITATION = ARXIV:1704.05473;%%"
+}
+
+@article{Buckley:2009bj,
+      author         = "Buckley, Andy and Hoeth, Hendrik and Lacker, Heiko and
+                        Schulz, Holger and von Seggern, Jan Eike",
+      title          = "{Systematic event generator tuning for the LHC}",
+      journal        = "Eur. Phys. J.",
+      volume         = "C65",
+      year           = "2010",
+      pages          = "331-357",
+      doi            = "10.1140/epjc/s10052-009-1196-7",
+      eprint         = "0907.2973",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ph",
+      reportNumber   = "IPPP-09-52, DCPT-104-22, LU-TP-09-18, HU-EP-09-33,
+                        MCNET-09-14",
+      SLACcitation   = "%%CITATION = ARXIV:0907.2973;%%"
+}
+
+@article{Buckley:2010ar,
+      author         = "Buckley, Andy and Butterworth, Jonathan and Lonnblad,
+                        Leif and Grellscheid, David and Hoeth, Hendrik and Monk,
+                        James and Schulz, Holger and Siegert, Frank",
+      title          = "{Rivet user manual}",
+      journal        = "Comput. Phys. Commun.",
+      volume         = "184",
+      year           = "2013",
+      pages          = "2803-2819",
+      doi            = "10.1016/j.cpc.2013.05.021",
+      eprint         = "1003.0694",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ph",
+      reportNumber   = "MCNET-10-03",
+      SLACcitation   = "%%CITATION = ARXIV:1003.0694;%%"
+}
+
+@article{Aad:2016oit,
+      author         = "Aad, Georges and others",
+      title          = "{Measurement of the charged-particle multiplicity inside
+                        jets from $\sqrt{s}=8$ TeV $pp$ collisions with the ATLAS
+                        detector}",
+      collaboration  = "ATLAS",
+      journal        = "Eur. Phys. J.",
+      volume         = "C76",
+      year           = "2016",
+      number         = "6",
+      pages          = "322",
+      doi            = "10.1140/epjc/s10052-016-4126-5",
+      eprint         = "1602.00988",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ex",
+      reportNumber   = "CERN-EP-2016-001",
+      SLACcitation   = "%%CITATION = ARXIV:1602.00988;%%"
+}
+
+@article{ATL-PHYS-PUB-2014-021,
+      title         = "{ATLAS Run 1 Pythia8 tunes}",
+      collaboration   = "ATLAS",
+      address       = "Geneva",
+      journal        = "ATL-PHYS-PUB-2014-021",
+      month         = "Nov",
+      year          = "2014",
+      reportNumber  = "ATL-PHYS-PUB-2014-021",
+      url           = "https://cds.cern.ch/record/1966419",
+}
+@article{Buskulic:1992hq,
+      author         = "Buskulic, D. and others",
+      title          = "{Properties of hadronic Z decays and test of QCD
+                        generators}",
+      collaboration  = "ALEPH",
+      journal        = "Z. Phys.",
+      volume         = "C55",
+      year           = "1992",
+      pages          = "209-234",
+      doi            = "10.1007/BF01482583",
+      reportNumber   = "CERN-PPE-92-062",
+      SLACcitation   = "%%CITATION = ZEPYA,C55,209;%%"
+}
+
+
+@article{Abbiendi:2004qz,
+      author         = "Abbiendi, G. and others",
+      title          = "{Measurement of event shape distributions and moments in
+                        e+ e- ---> hadrons at 91-GeV - 209-GeV and a determination
+                        of alpha(s)}",
+      collaboration  = "OPAL",
+      journal        = "Eur. Phys. J.",
+      volume         = "C40",
+      year           = "2005",
+      pages          = "287-316",
+      doi            = "10.1140/epjc/s2005-02120-6",
+      eprint         = "hep-ex/0503051",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ex",
+      reportNumber   = "CERN-PH-EP-2004-044",
+      SLACcitation   = "%%CITATION = HEP-EX/0503051;%%"
+}
+@article{Biebel:1999zt,
+      author         = "Biebel, O. and Movilla Fernandez, P. A. and Bethke, S.",
+      title          = "{C parameter and jet broadening at PETRA energies}",
+      collaboration  = "JADE",
+      journal        = "Phys. Lett.",
+      volume         = "B459",
+      year           = "1999",
+      pages          = "326-334",
+      doi            = "10.1016/S0370-2693(99)00733-9",
+      eprint         = "hep-ex/9903009",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ex",
+      reportNumber   = "PITHA-98-21A",
+      SLACcitation   = "%%CITATION = HEP-EX/9903009;%%"
+}
+
+@article{Abdallah:2004xe,
+      author         = "Abdallah, J. and others",
+      title          = "{The Measurement of alpha(s) from event shapes with the
+                        DELPHI detector at the highest LEP energies}",
+      collaboration  = "DELPHI",
+      journal        = "Eur. Phys. J.",
+      volume         = "C37",
+      year           = "2004",
+      pages          = "1-23",
+      doi            = "10.1140/epjc/s2004-01889-x",
+      eprint         = "hep-ex/0406011",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ex",
+      reportNumber   = "CERN-PH-EP-2004-007, CERN-EP-2004-007",
+      SLACcitation   = "%%CITATION = HEP-EX/0406011;%%"
+}
+@Article{DELPHICollaboration1997,
+author="{DELPHI Collaboration}",
+title="Measurement of event shape and inclusive distributions at {\$}{\{}sqrt s{\}} = 130{\$} and 136 GeV",
+journal="Zeitschrift f{\"u}r Physik C Particles and Fields",
+year="1997",
+month="Jun",
+day="01",
+volume="73",
+number="2",
+pages="229--242",
+abstract="Inclusive charged particle and event shape distributions are measured using 321 hadronic events collected with the DELPHI experiment at LEP at effective centre of mass energies of 130 to 136 GeV. These distributions are presented and compared to data at lower energies, in particular to the precise Z data. Fragmentation models describe the observed changes of the distributions well. The energy dependence of the means of the event shape variables can also be described using second order QCD plus power terms. A method independent of fragmentation model corrections is used to determine $\alpha$s from the energy dependence of the mean thrust and heavy jet mass. It is measured to be: {\$}{\$}{\textleftarrow}pha {\_}s(133 {\{}â¤ª GeV{\}})={\{}0.116{\}}pm {\{}0.007{\}}{\_}{\{}exp-0.004theo{\}}^{\{}+0.005{\}}{\$}{\$} from the high energy data.",
+issn="1431-5858",
+doi="10.1007/s002880050312",
+url="https://doi.org/10.1007/s002880050312"
+}
+
+
+@article{Hoang:2015hka,
+      author         = "Hoang, André H. and Kolodrubetz, Daniel W. and Mateu,
+                        Vicent and Stewart, Iain W.",
+      title          = "{Precise determination of $\alpha_s$ from the
+                        $C$-parameter distribution}",
+      journal        = "Phys. Rev.",
+      volume         = "D91",
+      year           = "2015",
+      number         = "9",
+      pages          = "094018",
+      doi            = "10.1103/PhysRevD.91.094018",
+      eprint         = "1501.04111",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ph",
+      reportNumber   = "UWTHPH-2015-1, MIT-CTP-4630, LPN14-128",
+      SLACcitation   = "%%CITATION = ARXIV:1501.04111;%%"
+}
+@article{Abbate:2010xh,
+      author         = "Abbate, Riccardo and Fickinger, Michael and Hoang, Andre
+                        H. and Mateu, Vicent and Stewart, Iain W.",
+      title          = "{Thrust at N^3LL with Power Corrections and a Precision
+                        Global Fit for alphas(mZ)}",
+      journal        = "Phys. Rev.",
+      volume         = "D83",
+      year           = "2011",
+      pages          = "074021",
+      doi            = "10.1103/PhysRevD.83.074021",
+      eprint         = "1006.3080",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ph",
+      reportNumber   = "MIT-CTP-4101, MPP-2010-7",
+      SLACcitation   = "%%CITATION = ARXIV:1006.3080;%%"
+}
+
+@Article{TheALEPHCollaboration2004,
+author="{The ALEPH Collaboration}",
+title="Studies of QCD at {\$}{\{}{\backslash}rm e{\}}^ + {\{}{\backslash}rm e{\}}^-{\$}centre-of-mass energies between 91 and 209 GeV",
+journal="The European Physical Journal C - Particles and Fields",
+year="2004",
+month="Jul",
+day="01",
+volume="35",
+number="4",
+pages="457--486",
+abstract="The hadronic final states observed with the ALEPH detector at LEP in {\$}{\{}{\backslash}rm e{\}}^ + {\{}{\backslash}rm e{\}}^-{\$}annihilation are analysed using 730 pb-1 of data collected between 91 and 209 GeV in the framework of QCD. In particular event-shape variables and inclusive charged particle spectra are measured. The energy evolution of quantities derived from these measurements is compared to analytic QCD predictions. The mean charged particle multiplicity, the charged particle momentum spectrum and its peak position are compared to predictions of the modified-leading-logarithmic approximation. The strong coupling constant {\$}{\backslash}alpha{\_}s{\$}is determined from a fit of the QCD prediction to distributions of six event-shape variables at eight centre-of-mass energies. A study of non-perturbative power law corrections is presented.",
+issn="1434-6052",
+doi="10.1140/epjc/s2004-01891-4",
+url="https://doi.org/10.1140/epjc/s2004-01891-4"
+}
+
+@article{Adams:2015hiv,
+      author         = "Adams, D. and others",
+      title          = "{Towards an Understanding of the Correlations in Jet
+                        Substructure}",
+      journal        = "Eur. Phys. J.",
+      volume         = "C75",
+      year           = "2015",
+      number         = "9",
+      pages          = "409",
+      doi            = "10.1140/epjc/s10052-015-3587-2",
+      eprint         = "1504.00679",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ph",
+      reportNumber   = "FERMILAB-PUB-15-670-CMS, SLAC-PUB-16703",
+      SLACcitation   = "%%CITATION = ARXIV:1504.00679;%%"
+}
+
+@article{Altheimer:2013yza,
+      author         = "Altheimer, A. and others",
+      title          = "{Boosted Objects and Jet Substructure at the LHC. Report
+                        of BOOST2012, held at IFIC Valencia, 23rd-27th of July
+                        2012}",
+      booktitle      = "{BOOST 2012 Valencia, Spain, July 23-27, 2012}",
+      journal        = "Eur. Phys. J.",
+      volume         = "C74",
+      year           = "2014",
+      number         = "3",
+      pages          = "2792",
+      doi            = "10.1140/epjc/s10052-014-2792-8",
+      eprint         = "1311.2708",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ex",
+      reportNumber   = "FERMILAB-PUB-13-669",
+      SLACcitation   = "%%CITATION = ARXIV:1311.2708;%%"
+}
+@article{Altheimer:2012mn,
+      author         = "Altheimer, A. and others",
+      title          = "{Jet Substructure at the Tevatron and LHC: New results,
+                        new tools, new benchmarks}",
+      booktitle      = "{BOOST 2011 Princeton , NJ, USA, 22?26 May 2011}",
+      journal        = "J. Phys.",
+      volume         = "G39",
+      year           = "2012",
+      pages          = "063001",
+      doi            = "10.1088/0954-3899/39/6/063001",
+      eprint         = "1201.0008",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ph",
+      reportNumber   = "SLAC-R-990, FERMILAB-PUB-12-897-T",
+      SLACcitation   = "%%CITATION = ARXIV:1201.0008;%%"
+}
+@article{Abdesselam:2010pt,
+      author         = "Abdesselam, A. and others",
+      title          = "{Boosted Objects: A Probe of Beyond the Standard Model
+                        Physics}",
+      booktitle      = "{Boost 2010 Oxford, United Kingdom, June 22-25, 2010}",
+      journal        = "Eur. Phys. J.",
+      volume         = "C71",
+      year           = "2011",
+      pages          = "1661",
+      doi            = "10.1140/epjc/s10052-011-1661-y",
+      eprint         = "1012.5412",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ph",
+      reportNumber   = "SLAC-PUB-15081, FERMILAB-PUB-10-617-CMS",
+      SLACcitation   = "%%CITATION = ARXIV:1012.5412;%%"
+}
+
+@article{Kardos:2018kth,
+      author         = "Kardos, Adam and Somogyi, Gábor and Trocsanyi,
+                        Zoltan",
+      title          = "{Soft-drop event shapes in electron?positron
+                        annihilation at next-to-next-to-leading order accuracy}",
+      journal        = "Phys. Lett.",
+      volume         = "B786",
+      year           = "2018",
+      pages          = "313-318",
+      doi            = "10.1016/j.physletb.2018.10.014",
+      eprint         = "1807.11472",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ph",
+      SLACcitation   = "%%CITATION = ARXIV:1807.11472;%%"
+}
+
+@article{Baron:2018nfz,
+      author         = "Baron, Jeremy and Marzani, Simone and Theeuwes, Vincent",
+      title          = "{Soft-Drop Thrust}",
+      journal        = "JHEP",
+      volume         = "08",
+      year           = "2018",
+      pages          = "105",
+      doi            = "10.1007/JHEP08(2018)105, 10.1007/JHEP05(2019)056",
+      note           = "[erratum: JHEP05,056(2019)]",
+      eprint         = "1803.04719",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ph",
+      SLACcitation   = "%%CITATION = ARXIV:1803.04719;%%"
+}
+@article{Kang:2018jwa,
+      author         = "Kang, Zhong-Bo and Lee, Kyle and Liu, Xiaohui and Ringer,
+                        Felix",
+      title          = "{The groomed and ungroomed jet mass distribution for
+                        inclusive jet production at the LHC}",
+      journal        = "JHEP",
+      volume         = "10",
+      year           = "2018",
+      pages          = "137",
+      doi            = "10.1007/JHEP10(2018)137",
+      eprint         = "1803.03645",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ph",
+      SLACcitation   = "%%CITATION = ARXIV:1803.03645;%%"
+}
+@article{Kang:2018vgn,
+      author         = "Kang, Zhong-Bo and Lee, Kyle and Liu, Xiaohui and Ringer,
+                        Felix",
+      title          = "{Soft drop groomed jet angularities at the LHC}",
+      journal        = "Phys. Lett.",
+      volume         = "B793",
+      year           = "2019",
+      pages          = "41-47",
+      doi            = "10.1016/j.physletb.2019.04.018",
+      eprint         = "1811.06983",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ph",
+      SLACcitation   = "%%CITATION = ARXIV:1811.06983;%%"
+}
+
+@article{Marzani:2017kqd,
+      author         = "Marzani, Simone and Schunk, Lais and Soyez, Gregory",
+      title          = "{The jet mass distribution after Soft Drop}",
+      journal        = "Eur. Phys. J.",
+      volume         = "C78",
+      year           = "2018",
+      number         = "2",
+      pages          = "96",
+      doi            = "10.1140/epjc/s10052-018-5579-5",
+      eprint         = "1712.05105",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ph",
+      reportNumber   = "DESY-17-217",
+      SLACcitation   = "%%CITATION = ARXIV:1712.05105;%%"
+}
+@article{Marzani:2017mva,
+      author         = "Marzani, Simone and Schunk, Lais and Soyez, Gregory",
+      title          = "{A study of jet mass distributions with grooming}",
+      journal        = "JHEP",
+      volume         = "07",
+      year           = "2017",
+      pages          = "132",
+      doi            = "10.1007/JHEP07(2017)132",
+      eprint         = "1704.02210",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ph",
+      SLACcitation   = "%%CITATION = ARXIV:1704.02210;%%"
+}
+
+@article{Frye:2016okc,
+      author         = "Frye, Christopher and Larkoski, Andrew J. and Schwartz,
+                        Matthew D. and Yan, Kai",
+      title          = "{Precision physics with pile-up insensitive observables}",
+      year           = "2016",
+      eprint         = "1603.06375",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ph",
+      SLACcitation   = "%%CITATION = ARXIV:1603.06375;%%"
+}
+
+@article{Dasgupta:2013ihk,
+      author         = "Dasgupta, Mrinal and Fregoso, Alessandro and Marzani,
+                        Simone and Salam, Gavin P.",
+      title          = "{Towards an understanding of jet substructure}",
+      journal        = "JHEP",
+      volume         = "09",
+      year           = "2013",
+      pages          = "029",
+      doi            = "10.1007/JHEP09(2013)029",
+      eprint         = "1307.0007",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ph",
+      reportNumber   = "CERN-PH-TH-2013-145, DCPT-13-86, IPPP-13-43, LPN13-036,
+                        MAN-HEP-2013-12",
+      SLACcitation   = "%%CITATION = ARXIV:1307.0007;%%"
+}
+
+@article{Larkoski:2014wba,
+      author         = "Larkoski, Andrew J. and Marzani, Simone and Soyez,
+                        Gregory and Thaler, Jesse",
+      title          = "{Soft Drop}",
+      journal        = "JHEP",
+      volume         = "05",
+      year           = "2014",
+      pages          = "146",
+      doi            = "10.1007/JHEP05(2014)146",
+      eprint         = "1402.2657",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ph",
+      reportNumber   = "MIT-CTP-4531, DCPT-14-24, IPPP-14-12",
+      SLACcitation   = "%%CITATION = ARXIV:1402.2657;%%"
+}
+@article{Hoang:2019ceu,
+      author         = "Hoang, André H. and Mantry, Sonny and Pathak, Aditya and
+                        Stewart, Iain W.",
+      title          = "{Nonperturbative Corrections to Soft Drop Jet Mass}",
+      journal        = "JHEP",
+      volume         = "12",
+      year           = "2019",
+      pages          = "002",
+      doi            = "10.1007/JHEP12(2019)002",
+      eprint         = "1906.11843",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ph",
+      reportNumber   = "MIT--CTP 5086, MIT-CTP 5086, UWThPh-2019-15",
+      SLACcitation   = "%%CITATION = ARXIV:1906.11843;%%"
+}
+
+@article{Frye:2016aiz,
+      author         = "Frye, Christopher and Larkoski, Andrew J. and Schwartz,
+                        Matthew D. and Yan, Kai",
+      title          = "{Factorization for groomed jet substructure beyond the
+                        next-to-leading logarithm}",
+      journal        = "JHEP",
+      volume         = "07",
+      year           = "2016",
+      pages          = "064",
+      doi            = "10.1007/JHEP07(2016)064",
+      eprint         = "1603.09338",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ph",
+      SLACcitation   = "%%CITATION = ARXIV:1603.09338;%%"
+}
+@article{Sirunyan:2018xdh,
+      author         = "Sirunyan, Albert M. and others",
+      title          = "{Measurements of the differential jet cross section as a
+                        function of the jet mass in dijet events from
+                        proton-proton collisions at $ \sqrt{s}=13 $ TeV}",
+      collaboration  = "CMS",
+      journal        = "JHEP",
+      volume         = "11",
+      year           = "2018",
+      pages          = "113",
+      doi            = "10.1007/JHEP11(2018)113",
+      eprint         = "1807.05974",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ex",
+      reportNumber   = "CMS-SMP-16-010, CERN-EP-2018-180",
+      SLACcitation   = "%%CITATION = ARXIV:1807.05974;%%"
+}
+
+@article{Aad:2019vyi,
+      author         = "Aad, Georges and others",
+      title          = "{A measurement of soft-drop jet observables in $pp$
+                        collisions with the ATLAS detector at $\sqrt{s} = 13$
+                        TeV}",
+      collaboration  = "ATLAS",
+      year           = "2019",
+      eprint         = "1912.09837",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ex",
+      reportNumber   = "CERN-EP-2019-269",
+      SLACcitation   = "%%CITATION = ARXIV:1912.09837;%%"
+}
+
+@article{Aaboud:2017qwh,
+      author         = "Aaboud, Morad and others",
+      title          = "{Measurement of the Soft-Drop Jet Mass in pp Collisions
+                        at $\sqrt{s} = 13$  TeV with the ATLAS Detector}",
+      collaboration  = "ATLAS",
+      journal        = "Phys. Rev. Lett.",
+      volume         = "121",
+      year           = "2018",
+      number         = "9",
+      pages          = "092001",
+      doi            = "10.1103/PhysRevLett.121.092001",
+      eprint         = "1711.08341",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ex",
+      reportNumber   = "CERN-EP-2017-231",
+      SLACcitation   = "%%CITATION = ARXIV:1711.08341;%%"
+}
+
+@article{Marzani:2019hun,
+      author         = "Marzani, Simone and Soyez, Gregory and Spannowsky,
+                        Michael",
+      title          = "{Looking inside jets: an introduction to jet substructure
+                        and boosted-object phenomenology}",
+      year           = "2019",
+      doi            = "10.1007/978-3-030-15709-8",
+      note           = "[Lect. Notes Phys.958,pp.(2019)]",
+      eprint         = "1901.10342",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ph",
+      SLACcitation   = "%%CITATION = ARXIV:1901.10342;%%"
+}
+
+@article{Frye:2017yrw,
+      author         = "Frye, Christopher and Larkoski, Andrew J. and Thaler,
+                        Jesse and Zhou, Kevin",
+      title          = "{Casimir Meets Poisson: Improved Quark/Gluon
+                        Discrimination with Counting Observables}",
+      journal        = "JHEP",
+      volume         = "09",
+      year           = "2017",
+      pages          = "083",
+      doi            = "10.1007/JHEP09(2017)083",
+      eprint         = "1704.06266",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ph",
+      reportNumber   = "MIT-CTP-4987, MIT--CTP-4987",
+      SLACcitation   = "%%CITATION = ARXIV:1704.06266;%%"
+}
+
 @article{Asquith:2018igt,
       author         = "Kogler, Roman and others",
       title          = "{Jet Substructure at the Large Hadron Collider:
